# sweetffr

./: .envrc  .rustfmt.toml  COPYING  Cargo.toml  README.adoc  default.nix  derivation.nix  flake.nix
.github/: README.md
.github/workflows/: sweetffr.yml
ci/: config.nix
ci/readme/: content.adoc  header.adoc
data/: recent.php
main/: replay.html
pages/: replay.html
src/: discord.rs  handler.rs  lib.rs  main.rs  playing.rs
src/ffr/: judge.rs  mod.rs  recent.rs  replay.rs  stream.rs
