[package]
name = "sweetffr"
version = "0.1.0"
authors = ["arcnmx"]
edition = "2021"

repository = "https://github.com/arcnmx/sweetffr"
license = "MIT"

include = [
	"/src/**",
	"/data/**",
	"/COPYING*",
]

[dependencies]
discord-presence = "1.2.0"
# discord-rich-presence = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
futures-util = { version = "0.3", features = ["sink"] }
tokio = { version = "1.38", features = ["signal", "sync", "macros", "rt-multi-thread"] }
tokio-websockets = { version = "0.8", features = ["client"] }
tokio-util = { version = "0.7" }
anyhow = "1"
clap = { version = "4.0", features = ["derive"] }
html5ever = { version = "0.27", optional = true }
log = "0.4"
env_logger = "0.11"

[features]
default = ["openssl", "recent"]
recent = ["dep:html5ever"]
openssl = ["tokio-websockets/native-tls", "tokio-websockets/openssl", "tokio-websockets/getrandom"]
sha1_smol = ["tokio-websockets/sha1_smol", "tokio-websockets/fastrand"]
